Add IBKR gateway tooling and ignore local LLM chat workspace